fixed: simple-indicator click did not work on iOS devices

--- a/app/styles/ember-mobile-pane.scss
+++ b/app/styles/ember-mobile-pane.scss
@@ -87,6 +87,7 @@
   display: flex;
 
   span {
+    cursor: pointer; // necessary to detect click on iOS
     padding: 5px;
 
     i {
